# flet-audio-recorder-webbyte

./: README.md  main.py  mkdocs.yml  pyproject.toml
_build/lib/flet_soundbyte/: __init__.py
docs/: FletSoundbyte.md  index.md
examples/flet_soundbyte_example/: pyproject.toml
examples/flet_soundbyte_example/src/: main.py
src/flet_soundbyte/: pyproject.toml
src/flet_soundbyte.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flutter/flet_soundbyte/: README.md
